# RISC-V-SAIL-to-CGEN-Coding-Challenge-

./: CMakeLists.txt  Makefile  README.md
include/: json_to_sexpr.h
scripts/: test.sh
src/: main.c  memory.c  parser.c  sexpr_output.c
tests/data/: sample.json  test.json  wikipedia_example.json
